force-app/main/default/objects/Job_Posting__c/Job_Posting__c.object-meta.xml
<CustomObject>
    <label>Job_Posting</label>
    <nameField>
        <label>Job_Posting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job_Postings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>