force-app/main/default/objects/Job_Posting__c/fields/Required_Grade__c.field-meta.xml
<CustomField>
    <fullName>Required_Grade__c</fullName>
    <label>Required_Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>