force-app/main/default/objects/Job_Posting__c/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <label>Required_Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>